--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@
 			<div id="instancesGroupDiv" class="group">
 				<div id="instancesDiv">
 					<div class="entity" id="dinoDiv">
-						<image id="dinoImage" src="dino.jpg" style="width:100px;height:100px;"></image>
+						<image id="dinoImage" src="res/dino.jpg" style="width:100px;height:100px;"></image>
 					</div>
-					<input class="storable" id="dinoInstanceSrcInput" value="dino.jpg" oninput="dinoImage.src=this.value||'dino.jpg'">
+					<input class="storable" id="dinoInstanceSrcInput" value="dino.jpg" oninput="dinoImage.src=this.value||'res/dino.jpg'">
 					<input class="storable" id="dinoInstanceWidthInput" value="100px" oninput="dinoImage.style.width=this.value||'100px'">
 					<input class="storable" id="dinoInstanceHeightInput" value="100px" oninput="dinoImage.style.height=this.value||'100px'">
 					<div class="entity" id="chestDiv">
-						<image id="chestImage" src="chest.jpg" style="width:100px;height:100px;"></image>
+						<image id="chestImage" src="res/chest.jpg" style="width:100px;height:100px;"></image>
 					</div>
-					<input class="storable" id="chestInstanceSrcInput" value="chest.jpg" oninput="chestImage.src=this.value||'chest.jpg'">
+					<input class="storable" id="chestInstanceSrcInput" value="chest.jpg" oninput="chestImage.src=this.value||'res/chest.jpg'">
 					<input class="storable" id="chestInstanceWidthInput" value="100px" oninput="chestImage.style.width=this.value||'100px'">
 					<input class="storable" id="chestInstanceHeightInput" value="100px" oninput="chestImage.style.height=this.value||'100px'">
 				</div>
@@ -139,7 +139,7 @@
 		<!-- Scripts -->
 
 		<!-- Properties script, can be changed to your script -->
-		<script type="text/javascript" src="properties.js"></script>
+		<script type="text/javascript" src="prop/properties.js"></script>
 		<!-- Main scripts -->
 		<script type="text/javascript" src="index.js"></script>
 
